--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/debug": "0.0.29",
     "@types/ip": "0.0.29",
     "@types/node": "^6.0.52",
+    "@types/node-fetch": "^1.6.6",
     "@types/request": "0.0.36",
     "@types/underscore": "^1.7.36",
     "@types/xml2js": "0.0.32",
