--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "ip": "1.1.4",
     "request": "^2.79.0",
     "underscore": "1.8.3",
-    "xml2js": "0.4.17"
+    "xml2js": "0.4.17",
+    "xmlbuilder": "^8.2.2"
   },
   "bugs": {
     "url": "http://github.com/bencevans/node-sonos/issues"
@@ -57,6 +58,7 @@
     "@types/request": "0.0.36",
     "@types/underscore": "^1.7.36",
     "@types/xml2js": "0.0.32",
+    "@types/xmlbuilder": "0.0.28",
     "mocha": "^3.2.0",
     "tslint": "^4.1.0",
     "typescript": "^2.1.4"
